fix: reset vg-card--side grid-column on mobile to prevent 0px collapse

--- a/apps/web/src/app/modules/home/pages/default/default.component.scss
+++ b/apps/web/src/app/modules/home/pages/default/default.component.scss
@@ -1648,6 +1648,7 @@ p.body {
     }
 
     .vg-card--side {
+      grid-column: auto;
       height: 40vw;
     }
   }
